// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ToolbarComponent (DOM characterization) 3D spatial cloud with screen-space region tools, eraser active 1`] = `
[
  "|",
  "dropdown:",
  "button:invert.svg "Channels & Histogram (brightness/contrast, colormap)"",
  "button:spatial-omics.svg "Spatial omics (colour by column or gene, legend, selection, distributions)"",
  "|",
  "button:pi pi-download "Download image as PNG"",
  "|",
  "button:pi pi-search "Zoom"",
  "button:pi pi-arrows-alt "Pan"",
  "button:pi pi-globe "Orbital rotation"",
  "button:pi pi-sync on "Turntable rotation"",
  "button:pi pi-home "Reset camera to default"",
  "|",
  "button:region-editor.svg "Open the Region Editor"",
  "button:pi pi-arrow-up-right "Selection mode (<kbd>s</kbd>)"",
  "button:pi pi-stop "Draw a rectangular region (<kbd>r</kbd>)"",
  "button:pi pi-pencil "Draw a freeform region (<kbd>f</kbd>)"",
  "button:wand.svg "Wand: click and drag to grow a region by similar pixel values (<kbd>w</kbd>). <br>Hold <kbd>Shift</kbd> while clicking or dragging on a region to erase pixels from it."",
  "button:pi pi-eraser on "Vertex eraser (<kbd>e</kbd>): click or drag to remove polygon vertices inside the cursor circle from any region."",
  "text:Radius",
  "slider:35",
  "text:35",
  "button:undo.svg disabled "Undo the last region action (<kbd>Ctrl</kbd>+<kbd>Z</kbd>). Up to 10 actions can be undone."",
  "button:redo.svg disabled "Redo the last undone region action (<kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>Z</kbd> / <kbd>Ctrl</kbd>+<kbd>Y</kbd>)."",
  "button:pi pi-trash "Delete selected region (<kbd>Del</kbd>)"",
  "|",
  "button:sam-box-prompt.svg "Segment the drawn rectangles with SAM (box prompt)"",
  "button:sam-point-prompt.svg "SAM point prompts: click a fiber to segment it as a new region; Shift/Alt-click to refine (exclude) the current one.<br>Esc undoes it."",
  "menu",
  "button:cells.svg "Auto-segment cells inside each drawn rectangle (cellpose-SAM)"",
  "|",
  "button:pi pi-question-circle "Help"",
]
`;

exports[`ToolbarComponent (DOM characterization) Heatmap, stack in single-image mode, wand active, no SAM models 1`] = `
[
  "|",
  "dropdown:Heatmap",
  "|",
  "button:spline-chart.svg "Add an intensity line (new colour). Click a line to select it, then use the trash tool to remove it."",
  "button:invert.svg "Channels & Histogram (brightness/contrast, colormap)"",
  "|",
  "button:pi pi-image on "Single image mode: enables high-def zoom"",
  "button:pi pi-images "Stack mode, enables slicing through image frames"",
  "text:Slice",
  "number",
  "button:pi pi-refresh "Plot this slice"",
  "text:of 4",
  "|",
  "button:pi pi-download "Download image as PNG"",
  "button:pi pi-window-maximize "Fit to view"",
  "|",
  "button:pi pi-search "Zoom drag"",
  "button:zoom-box.svg "Zoom box (<kbd>b</kbd>)"",
  "button:pi pi-arrows-alt "Pan the image (<kbd>p</kbd>)"",
  "button:pi pi-search-plus "Zoom in (<kbd>+</kbd>)"",
  "button:pi pi-search-minus "Zoom out (<kbd>-</kbd>)"",
  "|",
  "button:region-editor.svg "Open the Region Editor"",
  "button:pi pi-arrow-up-right "Selection mode (<kbd>s</kbd>)"",
  "button:pi pi-stop "Draw a rectangular region (<kbd>r</kbd>)"",
  "button:polyline.svg "Draw a polyline (<kbd>l</kbd>)"",
  "button:pi pi-pencil "Draw a freeform region (<kbd>f</kbd>)"",
  "button:paintbrush.svg "Brush: click and drag to paint a region. <br>Hold <kbd>Shift</kbd> while painting to erase from a region."",
  "button:wand.svg on "Wand: click and drag to grow a region by similar pixel values (<kbd>w</kbd>). <br>Hold <kbd>Shift</kbd> while clicking or dragging on a region to erase pixels from it."",
  "text:Sens.",
  "slider:2.5",
  "text:2.5",
  "button:pi pi-eraser "Vertex eraser (<kbd>e</kbd>): click or drag to remove polygon vertices inside the cursor circle from any region."",
  "button:undo.svg disabled "Undo the last region action (<kbd>Ctrl</kbd>+<kbd>Z</kbd>). Up to 10 actions can be undone."",
  "button:redo.svg "Redo the last undone region action (<kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>Z</kbd> / <kbd>Ctrl</kbd>+<kbd>Y</kbd>)."",
  "button:pi pi-trash "Delete selected region (<kbd>Del</kbd>)"",
  "|",
  "button:sam-box-prompt.svg "Segment the drawn rectangles with SAM (box prompt)"",
  "button:sam-point-prompt.svg "SAM point prompts: click a fiber to segment it as a new region; Shift/Alt-click to refine (exclude) the current one.<br>Esc undoes it."",
  "menu",
  "button:cells.svg "Auto-segment cells inside each drawn rectangle (cellpose-SAM)"",
  "|",
  "button:pi pi-question-circle "Help"",
]
`;

exports[`ToolbarComponent (DOM characterization) Image view, z-stack, brush active, SAM models and a contributed tool 1`] = `
[
  "|",
  "dropdown:Image",
  "|",
  "button:spline-chart.svg "Add an intensity line (new colour). Click a line to select it, then use the trash tool to remove it."",
  "button:invert.svg "Channels & Histogram (brightness/contrast, colormap)"",
  "button:smooth.svg "Smoothen (turn on image smoothing)"",
  "|",
  "text:Slice",
  "slider:3",
  "text:3 of 9",
  "|",
  "button:pi pi-download "Download image as PNG"",
  "button:pi pi-window-maximize "Fit to view"",
  "|",
  "button:zoom-box.svg "Zoom box (<kbd>b</kbd>)"",
  "button:pi pi-arrows-alt "Pan the image (<kbd>p</kbd>)"",
  "button:pi pi-search-plus "Zoom in (<kbd>+</kbd>)"",
  "button:pi pi-search-minus "Zoom out (<kbd>-</kbd>)"",
  "|",
  "button:region-editor.svg "Open the Region Editor"",
  "button:pi pi-arrow-up-right "Selection mode (<kbd>s</kbd>)"",
  "button:pi pi-stop "Draw a rectangular region (<kbd>r</kbd>)"",
  "button:polyline.svg "Draw a polyline (<kbd>l</kbd>)"",
  "button:pi pi-pencil "Draw a freeform region (<kbd>f</kbd>)"",
  "button:paintbrush.svg on "Brush: click and drag to paint a region. <br>Hold <kbd>Shift</kbd> while painting to erase from a region."",
  "text:Size",
  "slider:60",
  "text:60",
  "button:polygon-vertices.svg "Polygon: click to place each vertex; click the first point to close"",
  "button:vertex-add.svg "Add a vertex: click an edge of the selected polygon"",
  "button:vertex-delete.svg "Delete a vertex: click a vertex of the selected polygon"",
  "button:wand.svg "Wand: click and drag to grow a region by similar pixel values (<kbd>w</kbd>). <br>Hold <kbd>Shift</kbd> while clicking or dragging on a region to erase pixels from it."",
  "button:pi pi-eraser "Vertex eraser (<kbd>e</kbd>): click or drag to remove polygon vertices inside the cursor circle from any region."",
  "button:undo.svg "Undo the last region action (<kbd>Ctrl</kbd>+<kbd>Z</kbd>). Up to 10 actions can be undone."",
  "button:redo.svg disabled "Redo the last undone region action (<kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>Z</kbd> / <kbd>Ctrl</kbd>+<kbd>Y</kbd>)."",
  "button:pi pi-trash "Delete selected region (<kbd>Del</kbd>)"",
  "|",
  "button:sam-box-prompt.svg "Segment the drawn rectangles with SAM (box prompt)"",
  "button:sam-point-prompt.svg "SAM point prompts: click a fiber to segment it as a new region; Shift/Alt-click to refine (exclude) the current one.<br>Esc undoes it."",
  "button:pi pi-chevron-down "Pick the SAM model (used by both segment tools)"",
  "menu",
  "button:cells.svg "Auto-segment cells inside each drawn rectangle (cellpose-SAM)"",
  "button:pi pi-search",
  "button:pi pi-chevron-down",
  "button:pi pi-sliders-h",
  "menu",
  "|",
  "button:pi pi-question-circle "Help"",
]
`;

exports[`ToolbarComponent (DOM characterization) napari isosurface 3D: iso band, camera controls, axes, resolution 1`] = `
[
  "|",
  "dropdown:Isosurface",
  "text:Iso",
  "slider:-",
  "text:40–200",
  "button:invert.svg "Channels & Histogram (brightness/contrast, colormap)"",
  "|",
  "button:pi pi-download "Download image as PNG"",
  "|",
  "button:pi pi-search "Zoom"",
  "button:pi pi-arrows-alt "Pan"",
  "button:pi pi-globe on "Orbital rotation"",
  "button:pi pi-sync "Turntable rotation"",
  "button:pi pi-home "Reset camera to default"",
  "button:3d-coordinates.svg on "Toggle 3D axes / scale"",
  "text:Res",
  "dropdown:¼",
  "|",
  "button:pi pi-question-circle "Help"",
]
`;

exports[`ToolbarComponent (DOM characterization) pipeline subset: zoom and region tools only 1`] = `
[
  "|",
  "button:zoom-box.svg on "Zoom box (<kbd>b</kbd>)"",
  "button:pi pi-arrows-alt "Pan the image (<kbd>p</kbd>)"",
  "button:pi pi-search-plus "Zoom in (<kbd>+</kbd>)"",
  "button:pi pi-search-minus "Zoom out (<kbd>-</kbd>)"",
  "|",
  "button:region-editor.svg "Open the Region Editor"",
  "button:pi pi-arrow-up-right "Selection mode (<kbd>s</kbd>)"",
  "button:pi pi-stop "Draw a rectangular region (<kbd>r</kbd>)"",
  "button:polyline.svg "Draw a polyline (<kbd>l</kbd>)"",
  "button:pi pi-pencil "Draw a freeform region (<kbd>f</kbd>)"",
  "button:paintbrush.svg "Brush: click and drag to paint a region. <br>Hold <kbd>Shift</kbd> while painting to erase from a region."",
  "button:polygon-vertices.svg "Polygon: click to place each vertex; click the first point to close"",
  "button:vertex-add.svg "Add a vertex: click an edge of the selected polygon"",
  "button:vertex-delete.svg "Delete a vertex: click a vertex of the selected polygon"",
  "button:wand.svg "Wand: click and drag to grow a region by similar pixel values (<kbd>w</kbd>). <br>Hold <kbd>Shift</kbd> while clicking or dragging on a region to erase pixels from it."",
  "button:pi pi-eraser "Vertex eraser (<kbd>e</kbd>): click or drag to remove polygon vertices inside the cursor circle from any region."",
  "button:undo.svg disabled "Undo the last region action (<kbd>Ctrl</kbd>+<kbd>Z</kbd>). Up to 10 actions can be undone."",
  "button:redo.svg disabled "Redo the last undone region action (<kbd>Ctrl</kbd>+<kbd>Shift</kbd>+<kbd>Z</kbd> / <kbd>Ctrl</kbd>+<kbd>Y</kbd>)."",
  "button:pi pi-trash "Delete selected region (<kbd>Del</kbd>)"",
  "|",
  "button:sam-box-prompt.svg "Segment the drawn rectangles with SAM (box prompt)"",
  "button:sam-point-prompt.svg "SAM point prompts: click a fiber to segment it as a new region; Shift/Alt-click to refine (exclude) the current one.<br>Esc undoes it."",
  "menu",
  "button:cells.svg "Auto-segment cells inside each drawn rectangle (cellpose-SAM)"",
]
`;
